@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007-2021 Crafter Software Corporation. All Rights Reserved.
+ * Copyright (C) 2007-2022 Crafter Software Corporation. All Rights Reserved.
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 3 as published by
@@ -16,16 +16,18 @@
 
 package org.craftercms.studio.api.v2.utils;
 
-import com.jcraft.jsch.JSch;
-import com.jcraft.jsch.JSchException;
-import com.jcraft.jsch.Session;
 import org.apache.commons.collections.MapUtils;
+import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.configuration2.HierarchicalConfiguration;
+import org.apache.commons.configuration2.tree.ImmutableNode;
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.FilenameUtils;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.craftercms.commons.crypto.CryptoException;
 import org.craftercms.commons.crypto.TextEncryptor;
+import org.craftercms.commons.git.utils.AuthConfiguratorFactory;
+import org.craftercms.commons.git.utils.AuthenticationType;
+import org.craftercms.commons.git.utils.TypeBasedAuthConfiguratorBuilder;
 import org.craftercms.studio.api.v1.constant.GitRepositories;
 import org.craftercms.studio.api.v1.constant.StudioConstants;
 import org.craftercms.studio.api.v1.exception.ServiceLayerException;
@@ -37,7 +39,6 @@ import org.craftercms.studio.api.v1.log.Logger;
 import org.craftercms.studio.api.v1.log.LoggerFactory;
 import org.craftercms.studio.api.v1.service.GeneralLockService;
 import org.craftercms.studio.api.v1.service.security.SecurityService;
-import org.craftercms.studio.api.v2.dal.RemoteRepository;
 import org.craftercms.studio.api.v2.dal.User;
 import org.craftercms.studio.api.v2.exception.RepositoryLockedException;
 import org.craftercms.studio.api.v2.repository.RetryingRepositoryOperationFacade;
@@ -45,6 +46,7 @@ import org.craftercms.studio.api.v2.service.security.internal.UserServiceInterna
 import org.craftercms.studio.impl.v1.repository.StrSubstitutorVisitor;
 import org.craftercms.studio.impl.v1.repository.git.GitContentRepositoryConstants;
 import org.craftercms.studio.impl.v1.repository.git.TreeCopier;
+import org.craftercms.studio.impl.v2.utils.GitUtils;
 import org.eclipse.jgit.api.AddCommand;
 import org.eclipse.jgit.api.CheckoutCommand;
 import org.eclipse.jgit.api.CloneCommand;
@@ -59,7 +61,6 @@ import org.eclipse.jgit.api.ResetCommand;
 import org.eclipse.jgit.api.Status;
 import org.eclipse.jgit.api.StatusCommand;
 import org.eclipse.jgit.api.TransportCommand;
-import org.eclipse.jgit.api.TransportConfigCallback;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.eclipse.jgit.api.errors.InvalidRemoteException;
 import org.eclipse.jgit.api.errors.JGitInternalException;
@@ -78,21 +79,14 @@ import org.eclipse.jgit.revwalk.RevCommit;
 import org.eclipse.jgit.revwalk.RevTree;
 import org.eclipse.jgit.revwalk.RevWalk;
 import org.eclipse.jgit.storage.file.FileRepositoryBuilder;
-import org.eclipse.jgit.transport.SshSessionFactory;
-import org.eclipse.jgit.transport.SshTransport;
-import org.eclipse.jgit.transport.Transport;
-import org.eclipse.jgit.transport.UsernamePasswordCredentialsProvider;
-import org.eclipse.jgit.transport.ssh.jsch.JschConfigSessionFactory;
-import org.eclipse.jgit.transport.ssh.jsch.OpenSshConfig;
 import org.eclipse.jgit.treewalk.CanonicalTreeParser;
-import org.eclipse.jgit.util.FS;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.Resource;
 
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.OutputStream;
 import java.nio.channels.Channels;
 import java.nio.channels.FileChannel;
 import java.nio.channels.ReadableByteChannel;
@@ -102,14 +96,12 @@ import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.Properties;
 import java.util.UUID;
 
 import static org.craftercms.studio.api.v1.constant.GitRepositories.SANDBOX;
@@ -128,8 +120,8 @@ import static org.craftercms.studio.api.v2.utils.StudioConfiguration.REPO_COMMIT
 import static org.craftercms.studio.api.v2.utils.StudioConfiguration.REPO_CREATE_AS_ORPHAN_COMMIT_MESSAGE;
 import static org.craftercms.studio.api.v2.utils.StudioConfiguration.REPO_CREATE_REPOSITORY_COMMIT_MESSAGE;
 import static org.craftercms.studio.api.v2.utils.StudioConfiguration.REPO_CREATE_SANDBOX_BRANCH_COMMIT_MESSAGE;
-import static org.craftercms.studio.api.v2.utils.StudioConfiguration.REPO_DEFAULT_IGNORE_FILE;
 import static org.craftercms.studio.api.v2.utils.StudioConfiguration.REPO_SANDBOX_BRANCH;
+import static org.craftercms.studio.api.v2.utils.StudioConfiguration.REPO_IGNORE_FILES;
 import static org.craftercms.studio.impl.v1.repository.git.GitContentRepositoryConstants.CONFIG_PARAMETER_BIG_FILE_THRESHOLD;
 import static org.craftercms.studio.impl.v1.repository.git.GitContentRepositoryConstants.CONFIG_PARAMETER_BIG_FILE_THRESHOLD_DEFAULT;
 import static org.craftercms.studio.impl.v1.repository.git.GitContentRepositoryConstants.CONFIG_PARAMETER_COMPRESSION;
@@ -143,6 +135,9 @@ import static org.eclipse.jgit.lib.Constants.HEAD;
 
 public class GitRepositoryHelper {
 
+    public static final String CONFIG_KEY_RESOURCE = "resource";
+    public static final String CONFIG_KEY_FOLDER = "folder";
+
     private static final Logger logger = LoggerFactory.getLogger(GitRepositoryHelper.class);
 
     private StudioConfiguration studioConfiguration;
@@ -151,6 +146,7 @@ public class GitRepositoryHelper {
     private UserServiceInternal userServiceInternal;
     private GeneralLockService generalLockService;
     private RetryingRepositoryOperationFacade retryingRepositoryOperationFacade;
+    private AuthConfiguratorFactory authConfiguratorFactory;
 
     private Map<String, Repository> sandboxes = new HashMap<>();
     private Map<String, Repository> published = new HashMap<>();
@@ -230,8 +226,7 @@ public class GitRepositoryHelper {
                 toReturn = true;
             }
         } catch (IOException e) {
-            logger.error("Failed to create sandbox repo for site: " + siteId + " using path " + siteSandboxRepoPath
-                    .toString(), e);
+            logger.error("Failed to create sandbox repo for site: " + siteId + " using path " + siteSandboxRepoPath, e);
         }
 
         try {
@@ -244,7 +239,7 @@ public class GitRepositoryHelper {
             }
         } catch (IOException e) {
             logger.error("Failed to create published repo for site: " + siteId + " using path " +
-                    sitePublishedRepoPath.toString(), e);
+                    sitePublishedRepoPath, e);
         }
 
         return toReturn;
@@ -316,42 +311,17 @@ public class GitRepositoryHelper {
         LsRemoteCommand lsRemoteCommand = git.lsRemote();
         lsRemoteCommand.setRemote(remote);
         final Path tempKey = Files.createTempFile(UUID.randomUUID().toString(), ".tmp");
-        lsRemoteCommand = setAuthenticationForCommand(lsRemoteCommand, authenticationType, remoteUsername,
+        setAuthenticationForCommand(lsRemoteCommand, authenticationType, remoteUsername,
                 remotePassword, remoteToken, remotePrivateKey, tempKey, false);
         retryingRepositoryOperationFacade.call(lsRemoteCommand);
         Files.deleteIfExists(tempKey);
         return true;
     }
 
-    public SshSessionFactory getSshSessionFactory(String privateKey, final Path tempKey)  {
-        try {
-            Files.write(tempKey, privateKey.getBytes());
-            SshSessionFactory sshSessionFactory = new JschConfigSessionFactory() {
-                @Override
-                protected void configure(OpenSshConfig.Host hc, Session session) {
-                    Properties config = new Properties();
-                    config.put("StrictHostKeyChecking", "no");
-                    session.setConfig(config);
-                }
-
-                @Override
-                protected JSch createDefaultJSch(FS fs) throws JSchException {
-                    JSch defaultJSch = new JSch();
-                    defaultJSch.addIdentity(tempKey.toAbsolutePath().toString());
-                    return defaultJSch;
-                }
-            };
-            return sshSessionFactory;
-        } catch (IOException e) {
-            logger.error("Failed to create private key for SSH connection.", e);
-        }
-        return null;
-    }
-
-    public <T extends TransportCommand> T setAuthenticationForCommand(T gitCommand, String authenticationType,
-                                                                      String username, String password, String token,
-                                                                      String privateKey, Path tempKey, boolean decrypt)
-            throws CryptoException, ServiceLayerException {
+    public void setAuthenticationForCommand(TransportCommand<?,?> gitCommand, String authenticationType,
+                                            String username, String password, String token, String privateKey,
+                                            Path tempKey, boolean decrypt)
+            throws CryptoException, ServiceLayerException, IOException {
         String passwordValue = password;
         String tokenValue = token;
         String privateKeyValue = privateKey;
@@ -366,40 +336,33 @@ public class GitRepositoryHelper {
                 privateKeyValue = encryptor.decrypt(privateKey);
             }
         }
-        final String pk = privateKeyValue;
+        TypeBasedAuthConfiguratorBuilder builder = authConfiguratorFactory.forType(authenticationType);
         switch (authenticationType) {
-            case RemoteRepository.AuthenticationType.NONE:
+            case AuthenticationType.NONE:
                 logger.debug("No authentication");
                 break;
-            case RemoteRepository.AuthenticationType.BASIC:
+            case AuthenticationType.BASIC:
                 logger.debug("Basic authentication");
-                UsernamePasswordCredentialsProvider credentialsProviderUP =
-                        new UsernamePasswordCredentialsProvider(username, passwordValue);
-                gitCommand.setCredentialsProvider(credentialsProviderUP);
+                builder
+                    .withUsername(username)
+                    .withPassword(passwordValue);
                 break;
-            case RemoteRepository.AuthenticationType.TOKEN:
+            case AuthenticationType.TOKEN:
                 logger.debug("Token based authentication");
-                UsernamePasswordCredentialsProvider credentialsProvider =
-                        new UsernamePasswordCredentialsProvider(tokenValue, StringUtils.EMPTY);
-                gitCommand.setCredentialsProvider(credentialsProvider);
+                builder
+                    .withUsername(tokenValue);
                 break;
-            case RemoteRepository.AuthenticationType.PRIVATE_KEY:
+            case AuthenticationType.PRIVATE_KEY:
                 logger.debug("Private key authentication");
+                Files.writeString(tempKey, privateKeyValue);
                 tempKey.toFile().deleteOnExit();
-                gitCommand.setTransportConfigCallback(new TransportConfigCallback() {
-                    @Override
-                    public void configure(Transport transport) {
-                        SshTransport sshTransport = (SshTransport)transport;
-                        sshTransport.setSshSessionFactory(getSshSessionFactory(pk, tempKey));
-                    }
-                });
-
+                builder
+                    .withPrivateKeyPath(tempKey.toString());
                 break;
             default:
                 throw new ServiceLayerException("Unsupported authentication type " + authenticationType);
         }
-
-        return gitCommand;
+        builder.build().configureAuthentication(gitCommand);
     }
 
     public String getGitPath(String path) {
@@ -584,11 +547,11 @@ public class GitRepositoryHelper {
                         .setMessage(getCommitMessage(REPO_CREATE_REPOSITORY_COMMIT_MESSAGE));
                 retryingRepositoryOperationFacade.call(commitCommand);
             } catch (GitAPIException e) {
-                logger.error("Error while creating repository for site with path" + path.toString(), e);
+                logger.error("Error while creating repository for site with path" + path, e);
                 toReturn = null;
             }
         } catch (IOException e) {
-            logger.error("Error while creating repository for site with path" + path.toString(), e);
+            logger.error("Error while creating repository for site with path" + path, e);
             toReturn = null;
         }
 
@@ -656,7 +619,7 @@ public class GitRepositoryHelper {
                 CheckoutCommand checkoutCommand = git.checkout()
                         .setCreateBranch(createBranch)
                         .setName(sandboxBranchName)
-                        .setForce(false);
+                        .setForceRefUpdate(true);
                 retryingRepositoryOperationFacade.call(checkoutCommand);
             }
             return true;
@@ -713,12 +676,12 @@ public class GitRepositoryHelper {
         Charset charset = StandardCharsets.UTF_8;
         String content = null;
         try {
-            content = new String(Files.readAllBytes(path), charset);
+            content = Files.readString(path, charset);
             content = content.replaceAll(StudioConstants.CONFIG_SITENAME_VARIABLE, site);
             Files.write(path, content.getBytes(charset));
             toReturn = true;
         } catch (IOException e) {
-            logger.error("Error replacing sitename variable inside configuration file " + path.toString() +
+            logger.error("Error replacing sitename variable inside configuration file " + path +
                     " for site " + site);
             toReturn = false;
         }
@@ -743,27 +706,45 @@ public class GitRepositoryHelper {
         }
     }
 
-    public boolean addGitIgnoreFile(String siteId) {
-        String defaultFileLocation = studioConfiguration.getProperty(REPO_DEFAULT_IGNORE_FILE);
-        ClassPathResource defaultFile = new ClassPathResource(defaultFileLocation);
-        if (defaultFile.exists()) {
-            logger.debug("Adding ignore file for site {0}", siteId);
-            Path siteSandboxPath = buildRepoPath(GitRepositories.SANDBOX, siteId);
-            Path ignoreFile = siteSandboxPath.resolve(GitContentRepositoryConstants.IGNORE_FILE);
-            if (!Files.exists(ignoreFile)) {
-                try (OutputStream out = Files.newOutputStream(ignoreFile, StandardOpenOption.CREATE);
-                     InputStream in = defaultFile.getInputStream()) {
-                    IOUtils.copy(in, out);
+    public boolean addGitIgnoreFiles(String siteId) {
+        List<HierarchicalConfiguration<ImmutableNode>> ignores = studioConfiguration.getSubConfigs(REPO_IGNORE_FILES);
+        if (CollectionUtils.isEmpty(ignores)) {
+            logger.debug("No ignore files will be added to site {0}", siteId);
+            return true;
+        }
+
+        logger.debug("Adding ignore files for site {0}", siteId);
+        Path siteSandboxPath = buildRepoPath(GitRepositories.SANDBOX, siteId);
+
+        for (HierarchicalConfiguration<ImmutableNode> ignore : ignores) {
+            String ignoreLocation = ignore.getString(CONFIG_KEY_RESOURCE);
+            Resource ignoreFile = new ClassPathResource(ignoreLocation);
+            if (!ignoreFile.exists()) {
+                logger.warn("Couldn't find ignore file at {0}", ignoreLocation);
+                continue;
+            }
+
+            String repoFolder = ignore.getString(CONFIG_KEY_FOLDER);
+            Path actualFolder = StringUtils.isEmpty(repoFolder)? siteSandboxPath : siteSandboxPath.resolve(repoFolder);
+            if (!Files.exists(actualFolder)) {
+                logger.debug("Repository doesn't contain a {0} folder for site {1}", repoFolder, siteId);
+                continue;
+            }
+
+            Path actualFile = actualFolder.resolve(GitContentRepositoryConstants.IGNORE_FILE);
+            if (!Files.exists(actualFile)) {
+                logger.debug("Adding ignore file at {0} for site {1}", repoFolder, siteId);
+                try (InputStream in = ignoreFile.getInputStream()) {
+                    Files.copy(in, actualFile);
                 } catch (IOException e) {
-                    logger.error("Error writing ignore file for site {0}", e, siteId);
+                    logger.error("Error writing ignore file at {0} for site {1}", e, repoFolder, siteId);
                     return false;
                 }
             } else {
-                logger.debug("Repository already contains an ignore file for site {0}", siteId);
+                logger.debug("Repository already contains an ignore file at {0} for site {1}", actualFolder, siteId);
             }
-        } else {
-            logger.warn("Could not find the default ignore file at {0}", defaultFileLocation);
         }
+
         return true;
     }
 
@@ -822,79 +803,46 @@ public class GitRepositoryHelper {
         logger.debug("Add user credentials if provided");
         // then clone
         logger.debug("Cloning from " + remoteUrl + " to " + localPath);
-        CloneCommand cloneCommand = Git.cloneRepository();
+        CloneCommand cloneCommand = Git.cloneRepository()
+                .setURI(remoteUrl)
+                .setDirectory(localPath)
+                .setRemote(remoteName)
+                .setCloneAllBranches(!singleBranch);
+        if (StringUtils.isNotEmpty(remoteBranch)) {
+            cloneCommand.setBranch(remoteBranch);
+        }
         Git cloneResult = null;
         String gitLockKey = SITE_SANDBOX_REPOSITORY_GIT_LOCK.replaceAll(PATTERN_SITE, siteId);
         generalLockService.lock(gitLockKey);
         try {
-            final Path tempKey = Files.createTempFile(UUID.randomUUID().toString(),".tmp");
-            switch (authenticationType) {
-                case RemoteRepository.AuthenticationType.NONE:
-                    logger.debug("No authentication");
-                    break;
-                case RemoteRepository.AuthenticationType.BASIC:
-                    logger.debug("Basic authentication");
-                    cloneCommand.setCredentialsProvider(new UsernamePasswordCredentialsProvider(remoteUsername,
-                            remotePassword));
-                    break;
-                case RemoteRepository.AuthenticationType.TOKEN:
-                    logger.debug("Token based authentication");
-                    cloneCommand.setCredentialsProvider(new UsernamePasswordCredentialsProvider(remoteToken,
-                            StringUtils.EMPTY));
-                    break;
-                case RemoteRepository.AuthenticationType.PRIVATE_KEY:
-                    logger.debug("Private key authentication");
-                    tempKey.toFile().deleteOnExit();
-                    cloneCommand.setTransportConfigCallback(new TransportConfigCallback() {
-                        @Override
-                        public void configure(Transport transport) {
-                            SshTransport sshTransport = (SshTransport)transport;
-                            sshTransport.setSshSessionFactory(getSshSessionFactory(remotePrivateKey, tempKey));
-                        }
-                    });
+            Path tempKey = Files.createTempFile(UUID.randomUUID().toString(), ".tmp");
+            try {
+                setAuthenticationForCommand(cloneCommand, authenticationType, remoteUsername, remotePassword,
+                        remoteToken, remotePrivateKey, tempKey, false);
 
-                    break;
-                default:
-                    throw new ServiceLayerException("Unsupported authentication type " + authenticationType);
-            }
-            if (StringUtils.isNotEmpty(remoteBranch)) {
-                cloneCommand.setBranch(remoteBranch);
-            }
+                cloneResult = retryingRepositoryOperationFacade.call(cloneCommand);
 
-            cloneCommand
-                    .setURI(remoteUrl)
-                    .setDirectory(localPath)
-                    .setRemote(remoteName)
-                    .setCloneAllBranches(!singleBranch);
-            cloneResult = retryingRepositoryOperationFacade.call(cloneCommand);
-            Files.deleteIfExists(tempKey);
-            Repository sandboxRepo = checkIfCloneWasOk(cloneResult, remoteName, remoteUrl) ;
+                Repository sandboxRepo = checkIfCloneWasOk(cloneResult, remoteName, remoteUrl);
 
-            sandboxRepo = optimizeRepository(sandboxRepo);
+                sandboxRepo = optimizeRepository(sandboxRepo);
 
-            // Make repository orphan if needed
-            if (createAsOrphan) {
-                makeRepoOrphan(sandboxRepo, siteId);
-            }
+                // Make repository orphan if needed
+                if (createAsOrphan) {
+                    makeRepoOrphan(sandboxRepo, siteId);
+                }
 
-            sandboxes.put(siteId, sandboxRepo);
-        } catch (InvalidRemoteException e) {
-            logger.error("Invalid remote repository: " + remoteName + " (" + remoteUrl + ")", e);
-            throw new InvalidRemoteRepositoryException("Invalid remote repository: " + remoteName + " (" +
-                    remoteUrl + ")");
-        } catch (TransportException e) {
-            if (StringUtils.endsWithIgnoreCase(e.getMessage(), "not authorized")) {
-                logger.error("Bad credentials or read only repository: " + remoteName + " (" + remoteUrl + ")",
-                        e);
-                throw new InvalidRemoteRepositoryCredentialsException("Bad credentials or read only repository: " +
-                        remoteName + " (" + remoteUrl + ") for username " + remoteUsername, e);
-            } else {
-                logger.error("Remote repository not found: " + remoteName + " (" + remoteUrl + ")", e);
-                throw new RemoteRepositoryNotFoundException("Remote repository not found: " + remoteName + " (" +
+                sandboxes.put(siteId, sandboxRepo);
+            } catch (InvalidRemoteException e) {
+                logger.error("Invalid remote repository: " + remoteName + " (" + remoteUrl + ")", e);
+                throw new InvalidRemoteRepositoryException("Invalid remote repository: " + remoteName + " (" +
                         remoteUrl + ")");
+            } catch (TransportException e) {
+                GitUtils.translateException(e, logger, remoteName, remoteUrl, remoteUsername);
+            } finally {
+                Files.deleteIfExists(tempKey);
             }
-        } catch (GitAPIException | IOException | UserNotFoundException e) {
-            logger.error("Error while creating repository for site with path" + siteSandboxPath.toString(), e);
+        } catch (GitAPIException | IOException | UserNotFoundException | CryptoException e) {
+            logger.error("Error while creating repository for site with path" + siteSandboxPath, e);
             toRet = false;
         } finally {
             generalLockService.unlock(gitLockKey);
@@ -1079,7 +1027,7 @@ public class GitRepositoryHelper {
             logger.debug("Deleted site: " + site + " at path: " + sitePath);
         } catch (IOException e) {
             logger.error("Failed to delete site: " + site + " at path: " + sitePath + " exception " +
-                    e.toString());
+                    e);
             toReturn = false;
         } finally {
             generalLockService.unlock(gitLockKeyPublished);
@@ -1089,7 +1037,7 @@ public class GitRepositoryHelper {
         return toReturn;
     }
 
-    public boolean writeFile(Repository repo, String site, String path, InputStream content) throws ServiceLayerException {
+    public boolean writeFile(Repository repo, String site, String path, InputStream content) {
         boolean result = true;
 
         try {
@@ -1177,7 +1125,6 @@ public class GitRepositoryHelper {
                 commitId = commit.getName();
             }
 
-            git.close();
         } catch (GitAPIException e) {
             logger.error("error adding and committing file to git: site: " + site + " path: " + path, e);
         } finally {
@@ -1263,6 +1210,10 @@ public class GitRepositoryHelper {
 
     public void setRetryingRepositoryOperationFacade(RetryingRepositoryOperationFacade retryingRepositoryOperationFacade) {
         this.retryingRepositoryOperationFacade = retryingRepositoryOperationFacade;
+    }
+
+    public void setAuthConfiguratorFactory(AuthConfiguratorFactory authConfiguratorFactory) {
+        this.authConfiguratorFactory = authConfiguratorFactory;
     }
 
 }
